<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SmartDevice</string>
    <string name="hello_world">Hello world!</string>
    <string name="test_str">This is a test!</string>
    <string name="action_settings">设置</string>
    <string name="home_str">首页</string>
    <string name="nav_device_str">设备</string>
    <string name="nav_senerio_str">场景</string>
    <string name="msg_str">消息</string>
    <string name="info_str">我</string>
    <string name="devices_str">设备管理</string>
    <string name="statics_str">数据统计</string>
    <string name="senerio_str">场景</string>
    <string name="platform_str">云平台</string>
    <string name="extra_easy_str">优智能</string>
    
    <string name="device_type_str">类型</string>
    <string name="device_str">表</string>
    
    <integer-array name="device_types_id">
        <item>1001</item>
        <item>1002</item>
        <item>1003</item>
        <item>1004</item>
        <item>1005</item>
        <item>1006</item>
        <item>1007</item>
        <item>1008</item>
    </integer-array>
    
    <string-array name="device_types">
        <item>所有设备</item>
        <item>表</item>
        <item>灯</item>
        <item>开关插座</item>
        <item>报警器</item>
        <item>传感器</item>
        <item>摄像头</item>
        <item>其他</item> 
    </string-array>
    
     <string-array name="room_types">
        <item>客厅</item>
        <item>卧室</item>
        <item>厨房</item>
        <item>餐厅</item>
        <item>卫生间</item>
        <item>地下室</item>
        <item>仓储间</item>
        <item>其他</item> 
    </string-array>
    
    <string name="device_type_name_str">未知类型</string>
    <string name="device_name_str">名称&#160;&#160;&#160;&#160;</string>
    <string name="device_id_str">ID&#160;&#160;&#160;&#160;</string>
    <string name="device_state_str">状态&#160;&#160;&#160;&#160;</string>
    <string name="device_value_str">值&#160;&#160;&#160;&#160;</string>
    
    <string name="device_state_run">运行中</string>
    <string name="device_value_unkown">未知</string>
    <string name="device_state_open">已开</string>
    <string name="device_state_close">已关</string>
    <string name="unknown_str">未知</string>
    <string name="logout_str">退出</string>
    <string name="ok_str">确定</string>
    <string name="no_devices">未查找到设备</string>
    <string name="getting_devices">正在获取设备...</string>
    
    <!-- Information -->
    <string name="personal_info">个人信息</string>
    <string name="link_device">关联设备</string>
    
    <!-- settings -->
    <string name="sys_settings">设置</string>
    <string name="message_push">消息推送</string>
    <string name="check_update">检查更新</string>
    <string name="about_us">关于我们</string>
    
    <!-- link device -->
    <string name="link_device_trigger">If</string>
    <string name="link_device_action">Then</string>
    <string name="link_device_trigger_cn">如果</string>
    <string name="link_device_action_cn">然后</string>
    <string name="link_device_desc">您可以关联两个设备，如果一个设备达到某个设置条件，然后可以自动触发另一个设备的某些动作。</string>
    <string name="link_device_example">例如</string>
    <string name="link_device_example_infare">人体红外</string>
    <string name="link_device_example_alarm">报警</string>
    <string name="link_device_example_trigger">触发</string>
    <string name="link_device_example_light">房间灯</string>
    <string name="link_device_example_light_on">自动开灯</string>
    <string name="link_device_create">创建关联</string>
    <string name="unchoosed_str">未选择</string>
    <string name="link_device_set_trigger">设置触发事件值或状态</string>
    <string name="link_device_set_action">设置触发动作值或状态</string>
    <string name="link_device_trigger_set">设置事件</string>
    <string name="link_device_action_set">设置动作</string>
    <string name="link_device_attr_value_none">触发值为空</string>
    <string name="link_device_trigger_event">触发事件</string>
    <string name="link_device_trigger_action">触发动作</string>
    <string name="link_device_trigger_none">未设置触发事件</string>
    <string name="link_device_action_none">未设置触发动作</string>
    <string name="link_device_new_link">创建中...</string>
    <string name="link_device_all">已建关联</string>
    <string name="link_device_none">没有已建关联</string>
    <string name="link_device_info">关联信息</string>
    <string name="link_device_delete">删除关联</string>
    
    
    <string name="link_device_attr_desc_open">设置一个开关状态</string>
    <string name="link_device_attr_desc_curtain">设置一个窗帘状态</string>
    <string name="link_device_attr_desc_brightness">设置一个亮度值</string>
    <string name="link_device_attr_desc_color_temper">设置一个色温值</string>
    <string name="link_device_attr_desc_alarm">设置一个报警状态</string>
    <string name="link_device_attr_desc_temper">设置一个温度值</string>
    <string name="link_device_attr_desc_humidity">设置一个湿度值</string>

    
    <!-- login/register -->
    <string name="user_name">用户名/手机号</string>
    <string name="password">密码</string>
    <string name="login">登&#160;&#160;录</string>
    <string name="new_user">新用户？</string>
    <string name="user_register">注册</string>
    <string name="find_back_password">找回密码</string>
    <string name="enter_username">请输入用户名/手机号</string>
    <string name="enter_password">请输入密码</string>
    <string name="register_new_user">注册新用户</string>
    <string name="register_back">退出</string>
    <string name="register_ensure_password">确认密码</string>
    <string name="enter_ensure_password">请再次输入密码</string>
    <string name="unknowed_error">哦哦！</string>
    <string name="login_fail">登录失败，请重试</string>
    <string name="login_network_error">登录失败，请检查网络</string>
    <string name="register_fail">注册用户失败！</string>
    <string name="register_ok">注册用户成功！</string>
    
    <!-- bind gateway -->
    <string name="bind_ok">绑定成功</string>
    <string name="bind_fail">绑定失败，请重试</string>
    <string name="binding">正在处理...</string>
    <string name="bind_gateway_none">输入不能为空</string>
    <string name="add_gateway">添加网关</string>
    <string name="binding_gateway">绑定网关</string>
    <string name="gateway">网关</string>
    <string name="binded_gateway">已绑定网关</string>
    <string name="enter_gateway_id">请输入网关ID</string>
    
    <!-- device -->
    <string name="device">设备</string>
    <string name="device_type">类别</string>
    <string name="network_fail">网络连接失败</string>
    <string name="bind_gatway_firstly">没有设备，点击绑定网关</string>
    <string name="bind_firstly">绑定</string>
    <string name="device_not_find">未找到设备</string>
    
    <!-- device information -->
    <string name="device_info">设备信息</string>
    <string name="device_sn">序列号</string>
    <string name="device_name">名称</string>
    <string name="curtain_open">窗帘开</string>
    <string name="curtain_stop">窗帘停</string>
    <string name="curtain_close">窗帘关</string>
    
    <!-- scene -->
    <string name="scene_add">添加场景</string>
    <string name="scene_name">场景名称</string>
    <string name="scene_name_hint">请输入场景名称</string>
    <string name="scene_cancel">取消</string>
    <string name="scene_ok">完成</string>
    <string name="scene_name_is_empty">场景名称为空</string>
    <string name="scene_name_empty">场景名称不能为空</string>
    <string name="scene_device_empty">请至少添加一个设备</string>
    <string name="scene_add_device">您可以添加该场景下要触发的设备</string>
    <string name="choose_scene_add_device">选择要添加的设备:</string>
    <string name="choosed_scene_add_device">已选择的设备（点击设置其触发属性）:</string>
    <string name="scene_add_device_add">添&#160;加</string>
    <string name="scene_one_device">请至少选择一个设备</string>
    <string name="scene_device_attribte">设备属性</string>
    <string name="scene_device_add">添加设备</string>
    <string name="scene_new_building">新建场景...</string>
    <string name="scene_device_adding">添加场景设备&#160;&#160;&#160;&#160;</string>
    <string name="scene_add_fail">添加场景失败</string>
    <string name="scene_add_successful">添加场景成功</string>
    <string name="scene_turn_on_hint">您可以点击开启当前场景</string>
    <string name="scene_have_no_device">当前场景下没有设备</string>
    <string name="scene_turn_on_fail">场景开启失败</string>
    <string name="scene_turn_on_successful">场景开启成功</string>
    <string name="scene_device_not_save">请先保存新添加设备</string>
    <string name="scene_info">场景信息</string>
    
    <!-- room -->
    <string name="room">房间</string>
    <string name="room_add">添加房间</string>
    <string name="room_name">房间名称</string>
    <string name="room_type">房间类型</string>
    <string name="room_new">新建房间</string>
    <string name="room_name_none">请输入房间名称</string>
    <string name="device_chooseable">可选设备</string>
    <string name="device_choose">选择设备</string>
    <string name="room_info">房间信息</string>
    <string name="room_delete">删除房间</string>
    <string name="room_device_delete">删除设备</string>
   
    <!-- message detail -->
    <string name="message_dev_name">名称&#160;&#160;&#160;&#160;</string>
    <string name="message_dev_type">类型&#160;&#160;&#160;&#160;</string>
    
    <!-- Tag -->
    <string name="device_info_tag">device_info</string>
    <string name="device_attr_type_tag">device_attr_info</string>
    <string name="device_info_view_tag">device_info_view</string>
    <string name="indicator_tag">indicator_tag</string>
    <string name="device_info_seekbar_tag">seekbar_tag</string>
    <string name="scene_add_device_tag">scene_add_device_tag</string>
    <string name="room_add_device_tag">room_add_device_tag</string>
    
    <!-- others -->
    <string name="red_hint_no">0</string>
    <string name="sure_delete">确定要删除吗？</string>
    <string name="grobal_delete">删除</string>
    <string name="grobal_cancel">取消</string>
    <string name="grobal_next_step">下一步</string>
    <string name="grobal_ok">完成</string>
    <string name="grobal_delete_fail">删除失败</string>
    <string name="grobal_delete_successful">删除成功</string>
    <string name="grobal_save_successful">保存成功</string>
    <string name="grobal_save_fail">保存失败</string>
    <string name="grobal_add">添加</string>
    <string name="grobal_sure">确定</string>
    <string name="grobal_illegal_string">输入含有不支持字符</string>
    
    <!-- cust seekbar -->
    <string name="seekbar_current_value">当前值：</string>
    <string name="seekbar_min_value">0</string>
    <string name="seekbar_max_value">100</string>
    
    <string name="back_exit">再点击一次退出</string>
    
</resources>
