<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="10dp"
        android:orientation="horizontal" >
      <TextView 
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="right"
        android:paddingRight="20dp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/stone_gray"
        android:text="@string/link_device_trigger"/>
      <ImageView 
          android:id="@+id/id_link_device_trigger_add"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          
          android:src="@drawable/icon_trigger_add"/>
    </LinearLayout>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:orientation="horizontal" >
      <TextView 
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingRight="20dp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:gravity="right"
        android:textColor="@color/stone_gray"
        android:text="@string/link_device_action"/>
      <ImageView 
          android:id="@+id/id_link_device_action_add"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:src="@drawable/icon_trigger_add_disable"/>
    </LinearLayout>
    <TextView 
        android:id="@+id/id_trigger_attr_event"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_gray_white"
        android:padding="2dp"
        android:textColor="@color/light_gray_20"
        android:text="@string/link_device_trigger_event"/>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView 
            android:id="@+id/id_trigger_if"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:padding="5dp"
            android:text="@string/link_device_trigger_cn"/>
        
    </LinearLayout>
     <TextView 
        android:id="@+id/id_trigger_attr_action"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_gray_white"
        android:layout_marginTop="50dp"
        android:padding="2dp"
        android:textColor="@color/light_gray_20"
        android:text="@string/link_device_trigger_action"/>
     <TextView 
            android:id="@+id/id_trigger_then"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:padding="5dp"
            android:text="@string/link_device_action_cn"/>
</LinearLayout>
