<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    android:orientation="horizontal" >
    
    <TextView 
        android:id="@+id/id_curtain_button_open"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/curtain_open"
        android:layout_weight="1"
        android:textSize="12sp"
        android:gravity="center_horizontal"
        android:drawableTop="@drawable/icon_curtain_open"/>
    
    <TextView 
        android:id="@+id/id_curtain_button_stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/curtain_stop"
        android:layout_weight="1"
        android:textSize="12sp"
         android:gravity="center_horizontal"
        android:drawableTop="@drawable/icon_curtain_stop"/>
    
    <TextView 
        android:id="@+id/id_curtain_button_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/curtain_close"
        android:layout_weight="1"
        android:textSize="12sp"
         android:gravity="center_horizontal"
        android:drawableTop="@drawable/icon_curtain_close"/>

</LinearLayout>
