<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:padding="5dp"
        android:gravity="center_vertical"
        android:background="@color/white"
        android:orientation="horizontal">
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/room_name"/>
        <TextView 
            android:id="@+id/id_room_info_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="50dp"
            android:textColor="@color/light_gray_20"
            android:text="@string/unknown_str"/>
    </LinearLayout>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:padding="5dp"
        android:gravity="center_vertical"
        android:background="@color/white"
        android:orientation="horizontal">
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/room_type"/>
        <TextView 
            android:id="@+id/id_room_info_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="50dp"
            android:textColor="@color/light_gray_20"
            android:text="@string/unknown_str"/>
    </LinearLayout>
    
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:padding="5dp"
        android:gravity="center_vertical"
        android:background="@color/white"
        android:text="@string/device"/>

        <GridView 
            android:id="@+id/id_room_info_device"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnWidth="60dp"
            android:numColumns="auto_fit"
            android:verticalSpacing="10dp"
            android:horizontalSpacing="10dp">
            
        </GridView>

</LinearLayout>
